--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-		<meta charset="UTF-8">
+	<meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="이규훈 -링크트리">
-    <meta property="og:description" content="Linktree">
-    <meta property="og:image" content="Linktree">
+    <meta property="og:description" content="Toy Project">
+    <meta property="og:image" content="개추.jpg">
     
     <title>이규훈 소개하기</title>
     <style>
