--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta property="og:description" content="Linktree">
     <meta property="og:image" content="화산.png">
     
-    <title>이규훈 소개하기</title>
+    <title>이규훈의 </title>
     <style>
         @import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css');
         * {
