--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <h1 class="main">이규훈</h1>
         <p class="sub"> 1998.09.04</p>
         <a target="_blank" href="https://www.instagram.com/lee.ky98/">인스타그램</a>
-        <a target="_blank" href="https://blog.naver.com/wxyz0904">블로그</a>
+        <a target="_blank" href="https://velog.io/@normalvector">Velog</a>
         <a target="_blank" href="https://github.com/Lee-Kyuhwun">깃허브</a>
     </div>
  
