--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="이규훈 -링크트리">
     <meta property="og:description" content="Linktree">
-    <meta property="og:image" content="화산.png">
+    <meta property="og:image" content="개추.png">
     
     <title>이규훈의 </title>
     <style>
