--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta property="og:description" content="Linktree">
     <meta property="og:image" content="개추.png">
     
-    <title>이규훈의 프로</title>
+    <title>이규훈의 프로필</title>
     <style>
         @import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css');
         * {
